hphp/hack/test/typecheck/func_ptr_in_constants/custom_function.php.exp
File "custom_function.php", line 6, characters 28-32:
Expected constant expression for initializer (Parsing[1002])
File "custom_function.php", line 10, characters 25-29:
Expected constant expression for initializer (Parsing[1002])
File "custom_function.php", line 10, characters 25-29:
Illegal constant value (Naming[2023])
File "custom_function.php", line 6, characters 28-30:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "custom_function.php", line 6, characters 28-32:
  From this declaration, the context of this function body provides the capability set {}
  File "custom_function.php", line 3, characters 10-12:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
